feat: add base layout component with dark mode toggle
- Implemented base layout component with a title and a toggle switch for dark mode.
- Added corresponding HTML and SCSS files for layout styling.
- Integrated PrimeNG Panel and ToggleSwitch modules for UI components.
- Utilized ChangeDetectionStrategy.OnPush for performance optimization.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "concurrently \"ng serve\" \"npx json-server --watch db.json --port 3000\"",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -20,10 +20,8 @@
     "@angular/router": "^19.1.0",
     "@primeng/themes": "^19.1.0",
     "@tailwindcss/postcss": "^4.1.4",
-    "postcss": "^8.5.3",
     "primeng": "^19.1.0",
     "rxjs": "~7.8.0",
-    "tailwindcss": "^4.1.4",
     "tailwindcss-primeui": "^0.6.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -33,12 +31,17 @@
     "@angular/cli": "^19.1.4",
     "@angular/compiler-cli": "^19.1.0",
     "@types/jasmine": "~5.1.0",
+    "autoprefixer": "^10.4.21",
+    "concurrently": "^9.1.2",
     "jasmine-core": "~5.5.0",
+    "json-server": "^1.0.0-beta.3",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.4",
     "typescript": "~5.7.2"
   }
 }
