--- a/package.json
+++ b/package.json
@@ -44,5 +44,8 @@
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.4",
     "typescript": "~5.7.2"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
